[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://shaders/death_shader.tres" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/baseColor = Color( 1, 1, 1, 0 )
shader_param/speed = -16.0
shader_param/linesColor = Color( 0, 0, 0, 1 )
shader_param/linesColorIntensity = 1.0
shader_param/hologramTextureTiling = Vector2( 1, 1 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 0.0
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 0.1
shader_param/shake_color_rate = 0.01
shader_param/progress = 0.0
shader_param/noise_desnity = 30.0
shader_param/beam_size = 0.15
shader_param/color = Color( 0, 1.02, 1.2, 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [  ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true

[node name="enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="body" type="CollisionShape2D" parent="."]

[node name="hitbox" type="Area2D" parent="."]
pause_mode = 1
collision_layer = 9
collision_mask = 20

[node name="shape" type="CollisionShape2D" parent="hitbox"]

[node name="body_sprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
frames = SubResource( 3 )
animation = "death"

[node name="sight_radius" type="Area2D" parent="."]
collision_layer = 8
monitorable = false

[node name="shape" type="CollisionShape2D" parent="sight_radius"]
shape = SubResource( 2 )

[node name="attack_radius" type="Area2D" parent="."]
collision_layer = 8
monitorable = false

[node name="shape" type="CollisionShape2D" parent="attack_radius"]
shape = SubResource( 1 )

[node name="attack_delay" type="Timer" parent="."]

[node name="tween" type="Tween" parent="."]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="sight_radius" to="." method="start_moving"]
[connection signal="body_exited" from="sight_radius" to="." method="stop_moving"]
[connection signal="body_entered" from="attack_radius" to="." method="start_attacking"]
[connection signal="body_exited" from="attack_radius" to="." method="stop_attacking"]
